# cipherCourt

./: .gitignore  COPILOT_CONTEXT.md  README.md  audit_report.md  audit_report_20260215_053321.csv  audit_summary.json  config.yaml  config_leakage_test.yaml  pyproject.toml  requirements.txt
ciphercourt/: __init__.py  audit.py  cli.py
ciphercourt/connectors/: __init__.py  base.py  license.py  local_csv_match_results.py  local_csv_odds.py  match_results.py  match_stats.py  odds.py  venue.py
ciphercourt/reports/: __init__.py
ciphercourt/utils/: __init__.py  config.py
data/: README.md
data/samples/: match_results.csv  odds.csv  odds_with_leakage.csv
examples/: basic_usage.py  end_to_end.py
tests/: test_audit.py  test_config.py  test_local_csv_connectors.py  test_reports.py
